--- a/bikjuu-portfolio/package.json
+++ b/bikjuu-portfolio/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
+    "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.19",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
